# youtube-analytics-project

./: .gitignore  pyproject.toml  setup.cfg
homework-2/: main.py
src/: app.env.sample  channel.py  decorators.py  playlist.py  video.py
tests/: test_channel.py  test_playlist.py  test_video.py
