[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = "SkyPro homeworks"
authors = ["Dmitri Camenev <dmit.cameneff@yandex.ru>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.97.0"
load-dotenv = "^0.1.0"
isodate = "^0.6.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
flake8-commas = "^2.1.0"
pep8-naming = "^0.13.3"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
